Add notes on order parameters

--- a/Lecture 1 - Cellular Automaton.ipynb
+++ b/Lecture 1 - Cellular Automaton.ipynb
@@ -936,7 +936,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. (An open question) As we discussed during the course, there is a phase transition when we change the parameter $\\lambda$. Could you please provide a measurement from statistical mechanics that can be used as an order parameter? And also explain why. (No programming is required)"
+        "3. (An open question) As we discussed during the course, there is a phase transition when we change the parameter $\\lambda$. Could you please provide a measurement from statistical mechanics that can be used as an order parameter? And also explain why. (No programming is required)\n",
+        "\n",
+        "> An order parameter is a measure of the degree of order across the boundaries in a phase transition system; it normally ranges between zero in one phase (ordered phase) and nonzero in the other (disordered phase)."
       ],
       "metadata": {
         "id": "wva8fpV35HIv"
