Create by colab

--- a/Lecture 3 - Percolation.ipynb
+++ b/Lecture 3 - Percolation.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AlexMa123/BIU_ComplexSystem_private/blob/main/Lecture%203%20-%20Percolation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AlexMa123/BIU-ComplexSystem/blob/main/Lecture%203%20-%20Percolation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -53,8 +53,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "3zUibpukt0kh",
+        "outputId": "37972180-f213-4670-dc6e-31755a3bc061"
+      },
       "outputs": [
         {
           "data": {
@@ -79,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Uv6UrMEG7xAT",
         "outputId": "f5a4d2e1-9f5e-4704-cd4b-7df88efdcae1"
@@ -127,8 +130,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "Wiaop-GWt0ko",
+        "outputId": "2054ff9a-fc16-4cf1-be68-b0175bb41d60"
+      },
       "outputs": [
         {
           "data": {
@@ -156,8 +162,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ZyOmN9Smt0kq"
+      },
       "outputs": [],
       "source": [
         "labeled_m, num_c = ndimage.label(m)"
@@ -165,8 +173,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "lbPEKzr3t0kr",
+        "outputId": "747d0656-c90f-4c12-b632-f270edb34deb"
+      },
       "outputs": [
         {
           "data": {
@@ -194,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "hcsMGsJ67xAW",
         "outputId": "dcd2c64d-dfbe-49b5-8718-a60eb8f23fa0"
@@ -243,8 +254,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "fhuw_C-ut0kv",
+        "outputId": "e612a7d4-f3ca-49eb-8d4d-a1365025dadc"
+      },
       "outputs": [
         {
           "data": {
@@ -263,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "6Uch3Gpx7xAZ",
         "outputId": "58715663-f647-4477-9f38-0d0f7f75f1a7"
@@ -287,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "yDx9aXAD7xAZ",
         "outputId": "0ce92fdf-39e9-4207-e72e-58cb64fb121f"
@@ -332,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "OEBi3ZyT7xAb",
         "outputId": "6273eb85-09cd-4d50-daae-fe02bc16cd40"
@@ -396,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "YNTn7Eys7xAg",
         "outputId": "fb346610-e1bd-44cf-e54b-d6a5c26e5f61"
@@ -690,9 +704,10 @@
       "source": []
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "3HJbWMsct0k5"
+      },
       "source": [
         "1. Renormalization\n",
         "\n",
@@ -704,8 +719,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.8.5 ('base')",
